# finance_calc

./: .gitignore  LICENSE  README.md  finance-calc.cabal
app/: Main.hs
src/Finance/: Calculations.hs  IO.hs
