cabal-version:       2.4
name:                finance-calc
version:             0.1.0.0
build-type:          Simple
author:              Sergey Yakunin
maintainer:          youremail@example.com
license:             MIT
extra-source-files:  README.md

executable finance-calc
  main-is:             Main.hs
  hs-source-dirs:      app src
  other-modules:       Finance.Calculations
                       Finance.IO
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5